--- a/bofolio/css/style.css
+++ b/bofolio/css/style.css
@@ -81,6 +81,7 @@ body{
 	width: 250px;
 	padding-left: 15px;
 	padding-right: 15px;
+    z-index: 7;
 }
 .author{
 	padding-top: 25px;
@@ -102,6 +103,7 @@ body{
 	border-radius: 50%;
     border: 3px solid #fff;
     vertical-align: middle;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
 }
 .author .img:before,
 .author .img:after{
@@ -111,6 +113,7 @@ body{
 	height: 3px;
 	background-color: #fff;
 	margin-top: -1.5px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
 .author .img:before{
 	width: 18px;
@@ -124,7 +127,7 @@ body{
 	font-size: 22px;
     display: inline-block;
     vertical-align: middle;
-    line-height: 20px;
+    line-height: 24px;
     font-weight: 700;
     color: #00beff;
 }
@@ -142,11 +145,28 @@ body{
 }
 .menu li a{
 	display: block;
-	padding-top: 5px;
-	padding-bottom: 5px;
+	padding: 5px 10px;
 	text-decoration: none;
 	color: #777;
 	font-size: 16px;
+    position: relative;
+}
+.menu li a:hover,
+.menu li.active a{
+    color: #363636;
+}
+.menu li a:before{
+    height: 2px;
+    width: 2px;
+    position: absolute;
+    content: '';
+    bottom: -1px;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    transition: all .5s;
+}
+.menu li a:hover:before{
+    box-shadow: 0px 0 0 rgba(0, 0, 0, 0.7), 8px 0px 0 rgba(0, 0, 0, 0.6), 16px 0 0 rgba(0, 0, 0, 0.5), 32px 0 0 rgba(0, 0, 0, 0.4), 64px 0 0 rgba(0, 0, 0, 0.3), 128px 0 0 rgba(0, 0, 0, 0.2);
 }
 .page{
 	margin-left: 270px;
@@ -186,4 +206,17 @@ body{
 }
 .bf-item .link:hover{
 	text-decoration: underline;
+}
+.footer{
+    width: 220px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 8;
+    padding: 15px;
+    font-size: 12px;
+}
+.footer .text{
+    text-align: center;
+    color: #ccc;
 }
