--- a/bofolio/css/style.css
+++ b/bofolio/css/style.css
@@ -150,6 +150,8 @@ body{
 	color: #777;
 	font-size: 16px;
     position: relative;
+    overflow: hidden;
+    z-index: 0;
 }
 .menu li a:hover,
 .menu li.active a{
@@ -160,7 +162,7 @@ body{
     width: 2px;
     position: absolute;
     content: '';
-    bottom: -1px;
+    bottom: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.8);
     transition: all .5s;
@@ -168,6 +170,38 @@ body{
 .menu li a:hover:before{
     box-shadow: 0px 0 0 rgba(0, 0, 0, 0.7), 8px 0px 0 rgba(0, 0, 0, 0.6), 16px 0 0 rgba(0, 0, 0, 0.5), 32px 0 0 rgba(0, 0, 0, 0.4), 64px 0 0 rgba(0, 0, 0, 0.3), 128px 0 0 rgba(0, 0, 0, 0.2);
 }
+.ink {
+  display: block;
+  position: absolute;
+  background:rgba(255, 255, 255, 0.8);
+  border-radius: 100%;
+  -webkit-transform:scale(0);
+     -moz-transform:scale(0);
+       -o-transform:scale(0);
+          transform:scale(0);
+}
+
+.animate {
+	-webkit-animation:ripple 0.65s linear;
+   -moz-animation:ripple 0.65s linear;
+    -ms-animation:ripple 0.65s linear;
+     -o-animation:ripple 0.65s linear;
+        animation:ripple 0.65s linear;
+}
+
+@-webkit-keyframes ripple {
+    100% {opacity: 0; -webkit-transform: scale(2.5);}
+}
+@-moz-keyframes ripple {
+    100% {opacity: 0; -moz-transform: scale(2.5);}
+}
+@-o-keyframes ripple {
+    100% {opacity: 0; -o-transform: scale(2.5);}
+}
+@keyframes ripple {
+    100% {opacity: 0; transform: scale(2.5);}
+}
+
 .page{
 	margin-left: 270px;
 	padding: 15px;
