--- a/carbontec/css/style.css
+++ b/carbontec/css/style.css
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,700");
+@import url(../fonts/xxiigeom/xxiigeom.css);
 body {
-  font-family: 'Roboto', sans-serif;
+  background: #000 url("../images/bg.jpg") center center repeat-y;
+  background-size: contain;
+  font-family: 'xxiigeom-lightuploaded_file';
   font-weight: 300;
   position: relative;
   color: #fff;
@@ -18,16 +21,27 @@ a:hover {
   text-decoration: none;
 }
 
+textarea {
+  resize: vertical;
+}
+
+.red {
+  color: #ff3939;
+}
+
 .main-nav {
-  position: absolute;
-  top: 0;
   width: 100%;
-  left: 0;
   z-index: 3;
   padding: 40px 50px 0 25px;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 .main-nav .wrap {
   position: relative;
+}
+.main-nav .container {
+  width: 1515px;
 }
 
 .logo {
@@ -35,21 +49,22 @@ a:hover {
 }
 
 .menu-bar {
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 38px 0 0;
+  float: right;
+  margin-top: 27px;
 }
 
 .menu {
   list-style: none;
   padding: 0;
-  margin: 0;
-  font-size: 13px;
+  margin: 0 51px 0 0;
+  font-size: 17px;
   text-transform: uppercase;
+  font-weight: bold;
+  font-family: 'xxiigeom-regularuploaded_file';
 }
 .menu li {
   float: left;
+  padding: 0 10px;
 }
 .menu li a {
   display: block;
@@ -64,20 +79,17 @@ a:hover {
   color: #ff3939;
   text-decoration: none;
 }
+.menu li.active a {
+  color: #ff3939;
+}
 
 .search {
-  background-color: rgba(255, 255, 255, 0.16);
-  height: 26px;
-  border: 1px solid #afafaf;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
-  width: 210px;
-  padding-left: 15px;
-  padding-right: 45px;
   position: absolute;
-  top: 0;
+  border-left: 1px solid #fff;
+  top: 40px;
   right: 0;
+  padding-left: 19px;
+  height: 28px;
 }
 .search .control {
   border: none;
@@ -101,6 +113,26 @@ a:hover {
   padding: 0;
   width: 26px;
 }
+.search .btn {
+  background: url("../images/search-white.png") center center no-repeat;
+  display: inline-block;
+  height: 28px;
+  width: 28px;
+  vertical-align: top;
+}
+
+.search-wrap {
+  background-color: rgba(255, 255, 255, 0.16);
+  display: none;
+  height: 26px;
+  border: 1px solid #afafaf;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  width: 210px;
+  padding-left: 15px;
+  padding-right: 45px;
+}
 
 .owl-carousel {
   position: relative;
@@ -120,17 +152,17 @@ a:hover {
 }
 .owl-dots .owl-dot {
   background-color: #fff;
-  height: 8px !important;
-  width: 8px;
+  height: 15px !important;
+  width: 15px;
   display: inline-block;
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
-  margin-left: 2px;
-  margin-right: 2px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 .owl-dots .owl-dot.active {
-  background-color: #ff8484;
+  background-color: #ff3939;
 }
 
 .shadow-top {
@@ -149,13 +181,27 @@ a:hover {
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 0%, rgba(1, 2, 2, 0.8) 1%, rgba(125, 185, 232, 0) 100%);
 }
 
-.page {
-  background: transparent url("../images/bg.jpg") center center repeat-y;
-  background-size: contain;
-  padding-top: 35px;
-}
 .page a {
   color: #ff3939;
+}
+
+.pt250 {
+  padding-top: 250px;
+}
+
+.pt90 {
+  padding-top: 90px;
+}
+
+.mb90 {
+  margin-bottom: 90px;
+}
+
+.text-editor {
+  line-height: 47px;
+}
+.text-editor p {
+  margin-bottom: 60px;
 }
 
 .list-link {
@@ -190,8 +236,9 @@ a:hover {
 
 .heading {
   font-weight: 300;
-  font-size: 24px;
+  font-size: 32px;
   line-height: 35px;
+  font-family: 'xxiigeom-bolduploaded_file';
 }
 .heading strong {
   background-color: #ff3939;
@@ -200,6 +247,46 @@ a:hover {
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
   border-radius: 3px;
+}
+.heading.red {
+  color: #ff3939;
+}
+.heading span {
+  display: inline-block;
+  padding: 10px 32px;
+  border-bottom: 2px solid #ff3939;
+}
+
+.heading-1 {
+  font-size: 40px;
+  font-family: 'xxiigeom-bolduploaded_file';
+  margin-bottom: 30px;
+}
+.heading-1 span {
+  display: inline-block;
+  padding-bottom: 35px;
+  border-bottom: 2px solid #ff3939;
+}
+
+.heading-2 {
+  font-family: 'xxiigeom-bolduploaded_file';
+  font-size: 28px;
+  margin-bottom: 70px;
+  margin-top: 0;
+}
+.heading-2 span {
+  color: #ff3939;
+}
+
+.img-list {
+  margin-bottom: 70px;
+}
+
+.line {
+  background-color: #ff3939;
+  height: 2px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .block-content {
@@ -249,14 +336,22 @@ a:hover {
 
 .btn.btn-default {
   color: #fff;
-  padding: 3px 20px;
+  padding: 10px 20px;
   background-color: #ff3939;
-  font-size: 18px;
+  font-size: 24px;
   border: none;
 }
 .btn.btn-default:hover {
   background-color: #fff;
   color: #ff3939;
+}
+
+.btn.btn-sm {
+  height: 22px;
+  padding-top: 0;
+  padding-bottom: 0;
+  line-height: 22px;
+  font-size: 15px;
 }
 
 .ui-widget.ui-widget-content {
@@ -398,7 +493,8 @@ a:hover {
 .footer .title {
   font-size: 14px;
   text-transform: uppercase;
-  font-weight: 400;
+  font-family: 'xxiigeom-bolduploaded_file';
+  margin-top: 5px;
 }
 .footer .ui-selectmenu-button.ui-button {
   width: 100%;
@@ -421,6 +517,397 @@ a:hover {
 .mobile-nav,
 .mob-btn {
   display: none !important;
+}
+
+.about .text {
+  font-size: 20px;
+  line-height: 47px;
+}
+.about > .text {
+  margin-bottom: 80px;
+}
+.about .heading {
+  margin-bottom: 60px;
+}
+
+.founder {
+  margin-bottom: 90px;
+}
+.founder .pic {
+  width: 238px;
+  height: 238px;
+  overflow: hidden;
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 25px;
+}
+.founder .title {
+  font-family: 'xxiigeom-bolduploaded_file';
+  color: #ff3939;
+  font-size: 30px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.founder .title span {
+  display: inline-block;
+  border-bottom: 2px solid #fff;
+}
+.founder .title + .text {
+  max-width: 510px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.founder .text {
+  text-align: center;
+}
+
+.contact-form {
+  background: url("../images/map.jpg") 0 0 no-repeat;
+  background-size: 100%;
+}
+
+.form-wrap {
+  background-color: #ff3939;
+  color: #fff;
+  border-radius: 10px;
+  padding: 30px 75px 30px 85px;
+  margin-top: 33%;
+}
+.form-wrap .heading {
+  text-align: center;
+  margin-bottom: 30px;
+}
+.form-wrap .title {
+  font-family: 'xxiigeom-bolduploaded_file';
+  font-size: 20px;
+  margin-bottom: 40px;
+}
+.form-wrap .text {
+  font-size: 18px;
+  line-height: 26px;
+}
+.form-wrap .text strong {
+  font-family: 'xxiigeom-bolduploaded_file';
+}
+.form-wrap .text p {
+  margin-bottom: 30px;
+}
+
+.f-row {
+  margin-bottom: 20px;
+}
+
+.btn-submit {
+  background-color: #791414;
+  color: #fff;
+  padding: 15px 50px;
+  text-transform: uppercase;
+}
+.btn-submit:hover {
+  background-color: #fff;
+  color: #791414;
+}
+
+.form-control {
+  height: 62px;
+  border-radius: 7px;
+  padding: 0 10px;
+  border: none;
+}
+
+.f-title {
+  font-size: 20px;
+  margin-bottom: 3px;
+}
+
+textarea.form-control {
+  height: 288px;
+}
+
+.text-bg {
+  padding-top: 28px;
+  padding-bottom: 50px;
+}
+
+.pt65 {
+  padding-top: 65px;
+}
+
+.color-dark {
+  color: #262626;
+}
+
+.bg1 {
+  background: #ff3939 url(../images/bg1.jpg) 0 0 no-repeat/auto 100%;
+}
+
+.bg2 {
+  background: #cfcfcf url(../images/bg2.jpg) right 0 no-repeat/auto 100%;
+}
+
+.bg3 {
+  background: #938e7a url(../images/bg3.jpg) 0 0 no-repeat/auto 100%;
+}
+
+.heading-lg {
+  font-size: 70px;
+  font-family: 'xxiigeom-bolduploaded_file';
+  line-height: 70px;
+}
+.heading-lg span {
+  font-size: 80px;
+  color: #fff;
+}
+.heading-lg .red {
+  font-size: 80px;
+  color: #ff3939;
+}
+
+.heading-red {
+  font-size: 54px;
+  color: #ff3939;
+  font-family: 'xxiigeom-bolduploaded_file';
+  margin-bottom: 50px;
+}
+
+.list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.list li {
+  position: relative;
+  padding-left: 108px;
+  min-height: 115px;
+  margin-bottom: 85px;
+}
+.list .num {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 117px;
+  line-height: 117px;
+  color: rgba(255, 255, 255, 0.1);
+  font-family: 'xxiigeom-heavyuploaded_file';
+  text-align: right;
+  width: 65px;
+  font-style: italic;
+}
+.list .title {
+  font-family: 'xxiigeom-bolduploaded_file';
+  color: #ff3939;
+  font-size: 38px;
+  margin-bottom: 3px;
+}
+.list .text {
+  font-size: 20px;
+}
+
+.table-info table {
+  margin-bottom: 65px;
+  width: 100%;
+}
+.table-info table th, .table-info table td {
+  border: 2px solid #fff;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 11%;
+}
+.table-info table td {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+.table-info table th:first-child,
+.table-info table td:first-child {
+  border: none;
+  width: auto;
+}
+
+.info {
+  font-family: 'xxiigeom-bolduploaded_file';
+  font-size: 21px;
+  line-height: 40px;
+}
+
+.calc {
+  background-color: #3a434a;
+  max-width: 690px;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: hidden;
+  border-radius: 10px;
+  color: #fff;
+}
+.calc .heading {
+  background-color: #ff3939;
+  padding: 15px;
+  text-align: center;
+  font-size: 36px;
+  line-height: 36px;
+}
+
+.calc-body {
+  padding: 35px 55px 0;
+}
+.calc-body .title {
+  font-size: 30px;
+}
+.calc-body .text {
+  font-size: 18px;
+  line-height: 25px;
+  margin-bottom: 20px;
+}
+.calc-body .add {
+  margin-left: -10px;
+}
+.calc-body .btn {
+  margin-bottom: 30px;
+  line-height: 35px;
+  height: 35px;
+  font-size: 24px;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.calc-val {
+  background-color: #363c48;
+  border: 1px solid #5c6067;
+  border-radius: 10px;
+  padding: 20px 40px;
+  margin-bottom: 30px;
+}
+
+.calc-row {
+  border-bottom: 1px solid #5c6067;
+  font-size: 18px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+.calc-row em {
+  font-size: 14px;
+}
+.calc-row > div:first-child {
+  padding-left: 0;
+}
+.calc-row > div:last-child {
+  padding-right: 0;
+}
+.calc-row .edit-field {
+  margin-right: 17px;
+}
+
+.calc-footer {
+  margin-bottom: 20px;
+  padding-left: 55px;
+  padding-right: 55px;
+}
+.calc-footer .btn {
+  margin-top: 0;
+}
+.calc-footer .btn + .btn {
+  margin-left: 20px;
+}
+
+.edit-field {
+  text-align: right;
+  width: auto;
+  min-width: 0;
+  background: none;
+  border: none;
+}
+
+.add {
+  background: url(../images/plus.png) 0 center no-repeat;
+  display: block;
+  height: 30px;
+  width: 30px;
+}
+
+.slider-wrap {
+  padding-top: 20px;
+  position: relative;
+  height: 55px;
+}
+
+#slider {
+  background-color: #828386;
+  position: relative;
+  height: 1px;
+  border: none;
+}
+#slider:before, #slider:after {
+  background-color: #828386;
+  position: absolute;
+  height: 4px;
+  width: 1px;
+  content: '';
+  top: 0;
+}
+#slider:before {
+  left: 0;
+}
+#slider:after {
+  right: 0;
+}
+
+.amount {
+  font-size: 12px;
+  position: absolute;
+  top: 28px;
+  width: 60px;
+  text-align: center;
+}
+.amount.amount-min {
+  left: -30px;
+}
+.amount.amount-max {
+  right: -30px;
+}
+
+.ui-slider-horizontal .ui-slider-range-min {
+  background-color: #ff3939;
+}
+
+.ui-slider .ui-slider-handle {
+  background-color: #ff3939 !important;
+  border-radius: 50%;
+  height: 12px;
+  border: none !important;
+  width: 12px;
+  top: -6px !important;
+  padding: 0 !important;
+  margin-left: -6px;
+}
+.ui-slider .ui-slider-handle:focus {
+  outline: none;
+}
+.ui-slider .ui-slider-handle span {
+  background-color: #bdbdbd;
+  color: #363c48;
+  position: absolute;
+  top: -25px;
+  text-align: center;
+  font-size: 12px;
+  height: 16px;
+  width: 45px;
+  left: -16.5px;
+}
+.ui-slider .ui-slider-handle span:before {
+  position: absolute;
+  height: 0;
+  width: 0;
+  content: '';
+  border-color: #bdbdbd transparent transparent;
+  border-style: solid;
+  border-width: 6px 6px 0;
+  left: 50%;
+  bottom: -6px;
+  -moz-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  -webkit-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
 }
 
 @media screen and (max-width: 992px) {
