--- a/bofolio/css/style.css
+++ b/bofolio/css/style.css
@@ -70,390 +70,20 @@ table {
 /*=============== Style ===============*/
 body{
 	font-family: 'Roboto', sans-serif;
-	font-size: 18px;
+  font-size: 18px;
+  background: rgb(213,213,213);
+  background: linear-gradient(0deg, rgba(213,213,213,1) 0%, rgba(255,255,255,1) 100%);
+  min-height: 100vh;
 }
-.header{
-	background-color: #f7f7f7;
-	position: fixed;
-	height: 100%;
-	left: 0;
-	top: 0;
-	width: 250px;
-	padding-left: 15px;
-	padding-right: 15px;
-    z-index: 7;
+.coming-soon{
+  text-align: center;
 }
-.author{
-	padding-top: 25px;
-	margin-bottom: 40px;
-}
-.author .img{
-	display: inline-block;
-    max-width: 100%;
-    margin-right: 15px;
-    height: 70px;
-    width: 70px;
-    vertical-align: middle;
-    position: relative;
-}
-.author .img img{
-	display: block;
-	max-width: 100%;
-	height: auto;
-	border-radius: 50%;
-    border: 3px solid #fff;
-    vertical-align: middle;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
-}
-.author .img:before,
-.author .img:after{
-	position: absolute;
-	top: 50%;
-	content: '';
-	height: 3px;
-	background-color: #fff;
-	margin-top: -1.5px;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-}
-.author .img:before{
-	width: 18px;
-	left: -18px;
-}
-.author .img:after{
-	width: 166px;
-	right: -166px;
-}
-.a-name{
-	font-size: 22px;
-    display: inline-block;
-    vertical-align: middle;
-    line-height: 24px;
-    font-weight: 700;
-    color: #00beff;
-}
-.a-name span{
-	font-size: 14px;
-    color: #9E9E9E;
-    font-weight: 100;
-}
-.nav-bar{}
-.menu{}
-.menu li{
-	text-transform: uppercase;
-	border-bottom: 1px solid #eee;
-}
-.menu li a{
-	display: block;
-	padding: 10px;
-	text-decoration: none;
-	color: #777;
-	font-size: 16px;
-    position: relative;
-    overflow: hidden;
-    z-index: 0;
-}
-.menu li a i{display: none;}
-.menu li a:hover,
-.menu li.active a{
-    color: #363636;
-}
-.menu li a:before{
-    height: 2px;
-    width: 2px;
-    position: absolute;
-    content: '';
-    bottom: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.8);
-    transition: all .5s;
-}
-.menu li a:hover:before{
-    box-shadow: 0px 0 0 rgba(0, 0, 0, 0.7), 8px 0px 0 rgba(0, 0, 0, 0.6), 16px 0 0 rgba(0, 0, 0, 0.5), 32px 0 0 rgba(0, 0, 0, 0.4), 64px 0 0 rgba(0, 0, 0, 0.3), 128px 0 0 rgba(0, 0, 0, 0.2);
-}
-.menu li.active a:before{background-color: #00beff;}
-.menu li.active a i{color: #00beff;}
-.ink {
-  display: block;
-  position: absolute;
-  background:rgba(255, 255, 255, 0.8);
-  border-radius: 100%;
-  -webkit-transform:scale(0);
-     -moz-transform:scale(0);
-       -o-transform:scale(0);
-          transform:scale(0);
-}
-
-.animate {
-	-webkit-animation:ripple 0.65s linear;
-   -moz-animation:ripple 0.65s linear;
-    -ms-animation:ripple 0.65s linear;
-     -o-animation:ripple 0.65s linear;
-        animation:ripple 0.65s linear;
-}
-
-@-webkit-keyframes ripple {
-    100% {opacity: 0; -webkit-transform: scale(2.5);}
-}
-@-moz-keyframes ripple {
-    100% {opacity: 0; -moz-transform: scale(2.5);}
-}
-@-o-keyframes ripple {
-    100% {opacity: 0; -o-transform: scale(2.5);}
-}
-@keyframes ripple {
-    100% {opacity: 0; transform: scale(2.5);}
-}
-
-.page{
-	margin-left: 235px;
-	padding: 15px 0 15px 15px;
-}
-.bfolio{
-	text-align: center;
-}
-.bf-item{
-	display: inline-block;
-    padding: 10px;
-    box-shadow: 0 1px 1px rgba(0,0,0,.1);
-    margin: 0 15px 30px;
-    max-width: 270px;
-    height: 338px;
-}
-.bf-item .pic{
-	max-width: 250px;
-	height: 250px;
-	overflow: hidden;
-	margin-bottom: 15px;
-}
-.bf-item .pic img{
-	display: inline-block;
-	max-width: 100%;
-}
-.bf-item .title{
-	font-weight: 700;
-	font-size: 20px;
-	margin-bottom: 5px;
-}
-.bf-item .link{
-	font-size: 14px;
-	text-decoration: none;
-	color: #999;
-}
-.bf-item .link:hover{
-	text-decoration: underline;
-}
-.heading{
-  font-size: 36px;
-  line-height: 40px;
-  margin-top: 10px;
-  margin-bottom: 20px;
-  text-align: left;
-}
-.section{
-  background: url(../images/border.png) repeat-x 0 bottom;
-  margin-bottom: 80px;
-  padding-bottom: 30px;
-  padding-left: 35px;
-  
-}
-.skll-item{
-    margin: 15px;
-    display: inline-block;
-}
-.skll-item .pic{
-    overflow: hidden;
-    height: 180px;
-    width: 180px;
-    border-radius:0 50% 50% 50%;
-}
-.skll-item .pic img{}
-.skll-item .title{
-    margin-bottom: 7px;
-    position: relative;
-}
-.skill-progress{
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-.skill-progress svg circle{
-  transition: stroke-dashoffset 1s;
-  -webkit-animation-play-state: running;
-}
-.skill-progress svg .done{
-  stroke: #04a500;
-  fill: #fff;
-  stroke-dashoffset: 170;
-  stroke-width: 5;
-  stroke-dasharray: 230;
-  -webkit-animation: done 2s;
-  animation: done 2s;
-}
-.skill-progress svg .good{
-  stroke: #05c300;
-  fill: #fff;
-  stroke-dashoffset: 170;
-  stroke-width: 5;
-  stroke-dasharray: 220;
-  -webkit-animation: good 2s;
-  animation: good 2s;
-}
-.skill-progress svg .well{
-  stroke: #7ac300;
-  fill: #fff;
-  stroke-dashoffset: 170;
-  stroke-width: 5;
-  stroke-dasharray: 215;
-  -webkit-animation: well 2s;
-  animation: well 2s;
-}
-.skill-progress svg .norm{
-  stroke: #c3bb00;
-  fill: #fff;
-  stroke-dashoffset: 170;
-  stroke-width: 5;
-  stroke-dasharray: 205;
-  -webkit-animation: norm 2s;
-  animation: norm 2s;
-}
-@-webkit-keyframes done {
-  from {
-    stroke-dashoffset: 230;
-  }  
-  to {
-    stroke-dashoffset: 170;
-  }
-}
-@keyframes done {
-  from {
-    stroke-dashoffset: 230;
-  }  
-  to {
-    stroke-dashoffset: 170;
-  }
-}
-@-webkit-keyframes good {
-  from {
-    stroke-dashoffset: 220;
-  }  
-  to {
-    stroke-dashoffset: 170;
-  }
-}
-@keyframes good {
-  from {
-    stroke-dashoffset: 220;
-  }  
-  to {
-    stroke-dashoffset: 170;
-  }
-}
-@-webkit-keyframes well {
-  from {
-    stroke-dashoffset: 215;
-  }  
-  to {
-    stroke-dashoffset: 170;
-  }
-}
-@keyframes well {
-  from {
-    stroke-dashoffset: 215;
-  }  
-  to {
-    stroke-dashoffset: 170;
-  }
-}
-@-webkit-keyframes norm {
-  from {
-    stroke-dashoffset: 205;
-  }  
-  to {
-    stroke-dashoffset: 170;
-  }
-}
-@keyframes norm {
-  from {
-    stroke-dashoffset: 205;
-  }  
-  to {
-    stroke-dashoffset: 170;
-  }
-}
-.btn{
+.coming-soon img{
   display: inline-block;
-  color: #fff;
-  background-color: #00beff;
-  padding: 15px 25px;
-  border-radius: 3px;
-  text-decoration: none;
-  -webkit-transition: all .3s;
-  -ms-transition: all .3s;
-  -o-transition: all .3s;
-  transition: all .3s;
+  max-width: 100%;
 }
-.btn:hover{
-  color: #00beff;
-  background-color: #f7f7f7;
-  box-shadow: 0 0 10px rgba(0,0,0,.2)
-}
-.footer{
-    width: 220px;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    z-index: 8;
-    padding: 15px;
-    font-size: 12px;
-}
-.footer .text{
-    text-align: center;
-    color: #ccc;
-}
-@media (max-width: 700px){
-  .header{
-    width: 90px;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-  .author{
-    padding-top: 10px;
-    margin-bottom: 0;
-  }
-  .author .img:before, .author .img:after{display: none;}
-  .author .img{
-    margin-right: 0;
-    margin-bottom: 10px;
-  }
-  .a-name{
-    display: block;
-    font-size: 16px;
-    text-align:center;
-  }
-  .menu li a{
-    position: relative;
-    width: 70px;
-    height: 70px;
-    padding: 0;
-  }
-  .menu li a span{display: none;}
-  .menu li a i{
-    display: block;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    font-size: 30px;
-    -webkit-transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%);
-    -o-transform: translate(-50%,-50%);
-    transform: translate(-50%,-50%);
-  }
-  .menu li a:before{display: none;}
-  .footer{padding-left: 90px;width: 100%;position: static;}
-  .page{
-    margin-left: 75px;
-  }
-  .section{padding-left: 15px;}
-  .bf-item{height: auto;}
-  .bf-item .pic{height: auto;}
+.coming-soon h6{
+  text-align: center;
+  font-style: italic;
+  font-size: 16px;
 }
